# cloud-computing-predavanja-beleske

./: .gitignore  pred-01.rst  pred-02.rst  pred-03.rst  pred-04.rst  pred-05.rst  pred-06.rst  pred-07.rst  pred-08.rst  pred-09.rst  pred-10.rst
materijali/pred-04/: use-case sajta sa dostavu hrane u Novom Sadu.ods
materijali/pred-05/: Dockerfile
materijali/pred-06/: Dockerfile  Makefile  pyproject.toml
materijali/pred-06/webapp/: urls.py  views.py
materijali/pred-07/: Makefile  docker-entrypoint.sh
materijali/pred-07/webapp/: settings.py  views.py
materijali/pred-08/: Dockerfile  Makefile  pyproject.toml
materijali/pred-08/visits/: models.py  views.py
materijali/pred-08/webapp/: settings.py
materijali/pred-09/: .env.example  Makefile  docker-entrypoint.sh
materijali/pred-09/visits/: models.py
materijali/pred-09/visits/migrations/: 0002_auto_20210113_0736.py
materijali/pred-09/webapp/: settings.py  urls.py
materijali/pred-10/: .dockerignore  Makefile  cdk.json  cdk.py  docker-compose.yml  pyproject.toml
materijali/pred-10/visits/migrations/: 0001_initial.py
